--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -22,6 +22,30 @@ nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
 .content label { font-weight: bold; margin-bottom: 0.5em; }
 .content input, .content textarea { margin-bottom: 1em; }
 .content textarea { min-height: 12em; resize: vertical; }
+.inline {display: inline;
+}
+.link-button{
+    height: 0.8em;
+    background: none;
+    border: none;
+    color: #377ba8;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 1.1em;
+    font-family: serif;
+
+}
+.link-button:focus{
+    outline: none;
+}
+.link-button:active{
+    color: red;
+}
 input.danger { color: #cc2f2e; }
 input[type=submit] { align-self: start; min-width: 10em; }
-.action2{display: block; padding: 0.5rem;}
+.carta{
+    width: 20em;
+}
+.blog {
+    width: 50em;
+}
