--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
+<body class="{{ 'blog' if g.user or posts else 'carta' }} " >
     <nav>
         <h1>flaskr</h1>
         <ul>
