--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -12,4 +12,7 @@
     <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
     <input type="submit" value="Save">
   </form>
+  <form action="{{ url_for('index') }}" method="get">
+    <input type="submit" value="cancel">
+  </form>
 {% endblock %}
