--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -16,9 +16,10 @@
           <div class="about">by {{ post1['username'] }} on {{ post1['created'].strftime('%Y-%m-%d') }}</div>
         </div>
         {% if g.user['id'] == post1['author_id'] %}
-          <a class="action" href="{{ url_for('blog.update', id=post1['id']) }}">Edit</a>
-          <form action="{{ url_for('blog.delete', id=post1['id']) }}" method="post">
-            <input class="action2" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
+         <a class="action" href="{{ url_for('blog.update', id=post1['id']) }}">Edit</a>
+          <form class="inline" action="{{ url_for('blog.delete', id=post1['id']) }}" method="post">
+            <input type="hidden" value="Delete">
+            <button type="submit" class="link-button" onclick="return confirm('Are you sure?');">Delete</button>
           </form>
         {% endif %}
       </header>
