--- a/flaskr/templates/blog/update.html
+++ b/flaskr/templates/blog/update.html
@@ -17,4 +17,7 @@
   <form action="{{ url_for('blog.delete', id=post['id']) }}" method="post">
     <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
   </form>
+  <form action="{{ url_for('index') }}" method="get">
+    <input type="submit" value="cancel">
+  </form>
 {% endblock %}
