--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -8,7 +8,7 @@
   <form method="post">
     <label for="title">Title</label>
     <input name="title" id="title" value="{{ request.form['title'] }}" required>
-    <label for="body">blog</label>
+    <label for="body">Body</label>
     <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
     <input type="submit" value="Save">
   </form>
